Add configuration to app.conf for Sandfly Security
Added configuration sections for install, ui, launcher, package, and settings.

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,2 +1,18 @@
- default/
-│   ├── app.conf
+[install]
+is_configured = false
+state = enabled
+
+[ui]
+is_visible = true
+label = Sandfly Security
+
+[launcher]
+author = Mark Teicher
+description = Splunk application for ingesting and analyzing data from a Sandfly Security server using the Sandfly REST API.
+version = 1.0.0
+
+[package]
+id = sandfly_security_for_splunk
+
+[settings]
+reload.setup = true
