Update endpoint patterns in web.conf for compliance

--- a/default/web.conf
+++ b/default/web.conf
@@ -7,67 +7,26 @@
 #   $SPLUNK_HOME/etc/apps/Sandfly_Security_For_Splunk_App/default/web.conf
 #
 # Purpose:
-# - Expose ONLY the app-defined REST endpoints to Splunk Web
-# - Ensure AppInspect compliance by exposing patterns that map to restmap.conf
+# - Expose app-defined admin REST handlers to Splunk Web
+# - Must match restmap.conf exactly
 #
-# Design rules:
-# - Every `pattern` below MUST correspond to a `match =` stanza in restmap.conf
-# - Do NOT expose wildcards (e.g., /data/*) unless the app defines them
-# - Only expose endpoints required for setup, validation, and status
-#
-# References:
-# - Splunk web.conf specification and expose behavior
-# - AppInspect: exposed patterns must match restmap.conf `match` stanzas
 # -------------------------------------------------------------------------
 
 ###############################################################################
-# Setup endpoint exposure
-#
-# Used by the Setup UI (setup.xml) to:
-# - test connectivity
-# - validate credentials
-# - validate proxy settings (none / proxy / proxy+auth)
+# Setup handler exposure
 ###############################################################################
 
 [expose:sandfly_setup]
-pattern = sandfly/setup
+pattern = sandfly_security_for_splunk/setup
 methods = GET, POST
 
 ###############################################################################
-# Validation endpoint exposure
-#
-# Used by UI and/or internal checks to:
-# - validate Sandfly auth/login
-# - validate token refresh
-# - validate collector access (read-only GET endpoints)
+# Validation handler exposure
 ###############################################################################
 
 [expose:sandfly_validation]
-pattern = sandfly/validation
+pattern = sandfly_security_for_splunk/validation
 methods = GET, POST
-
-###############################################################################
-# Health / status endpoint exposure
-#
-# Used by dashboards and troubleshooting to:
-# - report last successful run
-# - report token freshness
-# - report checkpoint state per collector
-###############################################################################
-
-[expose:sandfly_health]
-pattern = sandfly/health
-methods = GET
-
-###############################################################################
-# Proxy test endpoint exposure (optional but supported)
-#
-# Used during setup to validate proxy routing to the Sandfly server.
-###############################################################################
-
-[expose:sandfly_proxy_test]
-pattern = sandfly/proxy/test
-methods = POST
 
 ###############################################################################
 # END OF FILE
