--- a/bin/sandfly_pagerduty_alert.conf
+++ b/bin/sandfly_pagerduty_alert.conf
@@ -2,7 +2,7 @@
 # encoding: utf-8
 """
 =============================================================================
- sandfly_pagerduty_alert.py
+ File: bin/sandfly_pagerduty_alert.py
  Sandfly Security for Splunk App
  PagerDuty Alert Action
 =============================================================================
